--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,136 @@
-.top_container {
-  background-color: #E4F9F5;
-  position: relative;
-  padding-top: 100px;
-}
-
 body {
+  color: #40514E;
   margin: 0;
   text-align: center;
   font-family: 'Merriweather', serif;
+  background-color: #E4F9F5;
+}
+
+hr {
+  border-style: dotted;
+  width: 5%;
+  border-width: 10px 0 0;
+  margin: 100px auto 100px auto;
+  color:grey;
 }
 
 h1 {
+  font-size: 90px;
   font-family: 'Sacramento', cursive;
+  margin: 50px auto 0 auto;
+  color: #66BFBF;
 }
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  color: #66BFBF;
+  font-weight: normal;
+  font-size: 40px;
 }
-
 h3 {
-    font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #11999E;
+  font-weight: normal;
 }
-
-.margin {
-  width: 20%;
-  margin: 0 auto;
+a {
+  color: #11999E;
+  font-weight: normal;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  margin:10px 20px;
 }
-
-.middle_container {
+a:hover{
+  color:#EAF6F6;
 }
-
-.bottom_container {
+p{
+  line-height: 2;
+}
+.top_container {
+  position: relative;
+  padding-top: 100px;
+}
+.middle-container{
+  margin: 100px auto;
+}
+.sub-heading {
+  margin-top: 0;
+}
+.skill-row1 {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+}
+.skill-row2 {
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+  padding-bottom: 100px;
+}
+.profile-picture {
+  width: 10%;
+}
+/*clear is anti-float*/
+.development-img {
+  width: 25%;
+  float:left;
+  margin-right: 30px;
+}
+.android-img{
+  width: 25%;
+  float:right;
+  margin-left: 30px;
 }
 
 .top-cloud {
   position: absolute;
-  right: 500px;
+  right: 300px;
   top: 50px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 500px;
+  left: 300px;
   bottom: 300px;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Merriweather', serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+.bottom-container{
+  background-color: #66BFBF;
+  padding: 50px 0 20px;
+}
+.copyright{
+  font-size: 12px;
+  color:#EAF6F6;
+  padding: 20px 0;
+}
+.get-in-touch{
+  margin-bottom: 50px;
+}
+.contact-intro{
+  width:25%;
+  margin:40px auto 60px;
 }
